# lol-match-prediction

./: .env.example  .gitignore  CLAUDE.md  COLLECTOR_SUMMARY.md  OPTIMIZATION_SUMMARY.md  README.md  api_rate_limits.md  collector_example.py  pyproject.toml  test_optimizations.py
.claude/sdd/archive/collector-batch-optimization/: BUILD_REPORT_collector_batch_optimization.md  DEFINE_collector_batch_optimization.md  DESIGN_collector_batch_optimization.md  SHIPPED_2026-03-19.md
.claude/sdd/archive/collector-performance/: BUILD_REPORT_collector-performance.md  DEFINE_collector-performance.md  DESIGN_collector-performance.md  SHIPPED_2026-03-18.md
.claude/sdd/features/: BRAINSTORM_collector-performance.md  BRAINSTORM_collector_batch_optimization.md  DEFINE_collector_batch_optimization.md  DESIGN_collector_batch_optimization.md
.claude/sdd/reports/: BUILD_REPORT_collector_batch_optimization.md
.github/: copilot-instructions.md
collector/: USAGE.md  __init__.py  rate_limiter.py  riot_api_collector.py  utils.py
config/: config.yaml
docs/: architecture.md
tests/: test_api_key.py  test_collector.py  test_collector_phases.py  test_config_migration.py  test_endpoints.py
tests/fixtures/: minimal_config.yaml
